# age-for-lgtm

./: .gitignore  AGE_AboutDialog.cpp  AGE_AboutDialog.h  AGE_ComboBoxes.cpp  AGE_ComboBoxes.h  AGE_Copies.hpp  AGE_Frame.h  AGE_OpenDialog.cpp  AGE_OpenSave.cpp  AGE_SaveDialog.cpp  AGE_TextControls.cpp  AGE_TextControls.h  CMakeLists.txt  Common.h  Main.cpp  README.md
AGE_Frame/: Civs.cpp  Constructor.cpp  General.cpp  Graphics.cpp  Other.cpp  PlayerColors.cpp  Research.cpp  Sounds.cpp  TechTrees.cpp  Techs.cpp  TerrainBorders.cpp  TerrainRestrictions.cpp  Terrains.cpp  Units.cpp
wintendo/: Resources.rc
